--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.1.1",
   "description": "RPSapp: An Ionic project",
   "dependencies": {
+    "@angular/core": "^4.0.2",
+    "@ionic/cloud-angular": "^0.12.0",
+    "bluebird": "^3.5.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -20,7 +24,13 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "ionic-plugin-keyboard",
-    "cordova-plugin-splashscreen"
+    "cordova-plugin-splashscreen",
+    {
+      "variables":{
+        "SENDER_ID":"559008558816"
+      },
+      "locator":"phonegap-plugin-push"
+    }
   ],
   "cordovaPlatforms": []
 }
