--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       },
       "locator": "phonegap-plugin-push"
     },
-    "phonegap-plugin-push@~1.10.2"
+    "phonegap-plugin-push@~1.10.2",
+    "cordova-plugin-network-information"
   ],
   "cordovaPlatforms": []
 }
